# agent-debate-platform

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml
docs/: 01-overview.md  02-setup.md  03-schemas.md  04-gemini-client.md  05-prompts.md  06-orchestrator.md  07-judge-agent.md  08-debater-agent.md  09-argument-generator.md  10-fact-checker.md  11-personas.md  12-web-ui.md  13-debate-flow.md  14-data-packets.md
scripts/: run_all.sh
src/: argument_generator.py  config.py  debater_agent.py  fact_checker.py  gemini_client.py  judge_agent.py  memory.py  orchestrator.py  personas.py  planner.py  prompts.py  reflection.py  schemas.py
web/: index.html
